syntax="proto3";

package studentpb;

option go_package=".";
//windows: protoc -I api/pb api/student.proto --go_out=plugins=grpc:.


message StudentModel {
  int64 StudentID=1;
  string Name=2;
  float Score=3;
  string Grade=4;
  string Email=5;
  string PhoneNumber=6;
}

message StudentRequest{
  int64 StudentID=1;
  string Name=2;
  float Score=3;
  string Grade=4;
  string Email=5;
  string PhoneNumber=6;
}

message StudentResponse{
  int64 StudentID=1;
  string Name=2;
  float Score=3;
  string Email=4;
}

message StudentDetailResponse{
  StudentResponse StudentDetail=1;
  int64 Code=2;
}

message StudentCommonResponse{
  int64  Code = 1;
  string Message = 2;
  int64  StudentID = 3;
  string Name = 4;
  string Score = 5;
}

service StudentService{
  rpc StudentCreate(StudentRequest) returns(StudentCommonResponse);
  rpc StudentDelete(StudentRequest) returns(StudentCommonResponse);
  rpc StudentUpdate(StudentRequest) returns(StudentCommonResponse);
  rpc StudentShow(StudentRequest) returns(StudentDetailResponse);
}